--- a/src/MessageBox.Tests/MessageBox.Tests.csproj
+++ b/src/MessageBox.Tests/MessageBox.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
@@ -15,7 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MessageBox.Client\MessageBox.Client.csproj" />
+    <ProjectReference Include="..\MessageBox.Serializer.Json\MessageBox.Serializer.Json.csproj" />
     <ProjectReference Include="..\MessageBox.Server\MessageBox.Server.csproj" />
+    <ProjectReference Include="..\MessageBox.Testing\MessageBox.Testing.csproj" />
     <ProjectReference Include="..\MessageBox\MessageBox.csproj" />
   </ItemGroup>
 
