--- a/src/MessageBox.Server.Tcp/MessageBox.Server.Tcp.csproj
+++ b/src/MessageBox.Server.Tcp/MessageBox.Server.Tcp.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MessageBox.Server\MessageBox.Server.csproj" />
     <ProjectReference Include="..\MessageBox.Tcp\MessageBox.Tcp.csproj" />
     <ProjectReference Include="..\MessageBox\MessageBox.csproj" />
