--- a/src/MessageBox.Serializer.Json/MessageBox.Serializer.Json.csproj
+++ b/src/MessageBox.Serializer.Json/MessageBox.Serializer.Json.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>MessageBox</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +14,10 @@
   <ItemGroup>
     <ProjectReference Include="..\MessageBox.Client\MessageBox.Client.csproj" />
     <ProjectReference Include="..\MessageBox\MessageBox.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Serializer" />
   </ItemGroup>
 
 </Project>
