--- a/src/MessageBox.Server/MessageBox.Server.csproj
+++ b/src/MessageBox.Server/MessageBox.Server.csproj
@@ -7,6 +7,21 @@
     <RootNamespace>MessageBox</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Version Condition=" '$(APPVEYOR_BUILD_VERSION)' == '' ">0.0.1-local</Version>
+    <Version Condition=" '$(APPVEYOR_BUILD_VERSION)' != '' ">$(APPVEYOR_BUILD_VERSION)</Version>
+    <Authors>adospace</Authors>
+    <Description>MessageBox is .NET 6+ message broker that just works.</Description>
+    <Copyright>Adolfo Marinucci</Copyright>
+    <PackageId>MessageBox.Server</PackageId>
+    <PackageProjectUrl>https://github.com/adospace/message-box</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/adospace/message-box</RepositoryUrl>
+    <PackageTags>.net message broker</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
