--- a/src/MessageBox.Tests/MessageBox.Tests.csproj
+++ b/src/MessageBox.Tests/MessageBox.Tests.csproj
@@ -23,7 +23,7 @@
     <ProjectReference Include="..\MessageBox.Server\MessageBox.Server.csproj" />
     <ProjectReference Include="..\MessageBox.Tcp\MessageBox.Tcp.csproj" />
     <ProjectReference Include="..\MessageBox.Testing\MessageBox.Testing.csproj" />
-    <ProjectReference Include="..\MessageBox\MessageBox.csproj" />
+    <ProjectReference Include="..\MessageBox.Core\MessageBox.Core.csproj" />
   </ItemGroup>
 
 </Project>
