--- a/samples/demo/ConsumerApp/ConsumerApp.csproj
+++ b/samples/demo/ConsumerApp/ConsumerApp.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MessageBox.Serializer.Json" Version="1.0.3" />
+    <PackageReference Include="MessageBox.Tcp.Client" Version="1.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharedModels\SharedModels.csproj" />
+  </ItemGroup>
+
 </Project>
