--- a/src/MessageBox.Core/MessageBox.Core.csproj
+++ b/src/MessageBox.Core/MessageBox.Core.csproj
@@ -4,16 +4,15 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>MessageBox</RootNamespace>
   </PropertyGroup>
-  
+
   <PropertyGroup>
     <Version Condition=" '$(APPVEYOR_BUILD_VERSION)' == '' ">0.0.1-local</Version>
     <Version Condition=" '$(APPVEYOR_BUILD_VERSION)' != '' ">$(APPVEYOR_BUILD_VERSION)</Version>
     <Authors>adospace</Authors>
-    <Description>MessageBox is .NET 6+ message broker that just works. Reference this package to connect to a MessageBox TCP Server.</Description>
+    <Description>MessageBox is .NET 6+ message broker that just works.</Description>
     <Copyright>Adolfo Marinucci</Copyright>
-    <PackageId>MessageBox.Tcp.Client</PackageId>
+    <PackageId>MessageBox.Core</PackageId>
     <PackageProjectUrl>https://github.com/adospace/message-box</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/adospace/message-box</RepositoryUrl>
@@ -23,9 +22,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MessageBox.Client\MessageBox.Client.csproj" />
-    <ProjectReference Include="..\MessageBox.Tcp\MessageBox.Tcp.csproj" />
-    <ProjectReference Include="..\MessageBox.Core\MessageBox.Core.csproj" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
