--- a/src/MessageBox.Serializer.Json/MessageBox.Serializer.Json.csproj
+++ b/src/MessageBox.Serializer.Json/MessageBox.Serializer.Json.csproj
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MessageBox.Client\MessageBox.Client.csproj" />
-    <ProjectReference Include="..\MessageBox\MessageBox.csproj" />
+    <ProjectReference Include="..\MessageBox.Core\MessageBox.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
