Admin interface chart first version completed

--- a/src/Admin/Client/MessageBox.Server.Tcp.Host.Client.csproj
+++ b/src/Admin/Client/MessageBox.Server.Tcp.Host.Client.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise.Charts.Streaming" Version="0.9.5.3" />
+    <PackageReference Include="Blazorise.Material" Version="0.9.5.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.0.2" />
