Added docker support for the server host application

--- a/src/Admin/Server/appsettings.json
+++ b/src/Admin/Server/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:8301"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
